# data-clean-room-demo

./: .gitignore  E2E_HIERARCHY.md  README.md  about_dlp.md  ah_dcr_readme.md  ah_dcx_readme.md  analytics_hub_readme.md  demo_example.sql  pyproject.toml  setup_ah_dcr.py  setup_ah_dcx.py  setup_ah_readme.md
dcr_data_generator/: ANALYTICS_HUB_SETUP.md  __init__.py  bigquery_utils.py  data_generation_logic.py  data_generator.py  final_diagnostic.py  hashing_logic.py  main.py  setup_ah_dcr.py  setup_ah_dcx.py  setup_analytics_hub.py
